--- a/public/index.css
+++ b/public/index.css
@@ -405,7 +405,7 @@ border-bottom: 2px solid #FF9575;
   align-items: center;
 } */
 .preloader{
-  background: #fafafa url(./Assets/Rhombus.gif) no-repeat center center;
+  background: #fafafa url(./Assets/output-onlinegiftools.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
@@ -472,7 +472,116 @@ border-bottom: 2px solid #FF9575;
   width: 20px;
   background-color: #190101;
   border-radius: 5px;
+  transition: 0.2s ease-in-out;
 }
+/* .hamburgermenu li{
+  display: none;
+}
+.show{
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+  background-color: #f5f3eb;
+  top:0;
+  left: 0;
+  display: none;
+  flex-direction: column;
+ 
+}
+.show li{
+  display: none;
+} */
+.hamburgermenu{
+  height: 80vh;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+  background-color: #f5f3eb;
+  top:13%;
+  left: 0;
+  display: none;
+  -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  padding: 90px;
+  padding-top: 30px;
+  overflow-x: hidden;
+ 
+  
+}
+.hamburgermenu ul li{
+  list-style: none;
+  
+  position: relative;
+  cursor: pointer;
+}
+.hamburgermenu ul li a{
+  color:#190101;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+
+}
+.closeham{
+  display: none;
+}
+.hamburgermenu ul li::before{
+  content:"";
+  position:absolute;
+  left: 0;
+  bottom: -8px;
+  height: 2px;
+  width: 0%;
+  background-color:#FF9575;
+  transition: 0.2s ease-in-out;
+}
+.hamburgermenu ul li:hover::before{
+  width: 100%;
+}
+.one{
+  width: 10px;
+  transform: rotate(-35deg);
+  transition: 0.2s ease-in-out;
+  
+}
+.two{
+  width: 25px;
+  transition: 0.2s ease-in-out;
+}
+.three{
+  width: 10px;
+  transform: rotate(35deg);
+  transition: 0.2s ease-in-out;
+}
+.lowgap{
+  gap: 1px;
+  transition: 0.2s ease-in-out;
+}
+ @-webkit-keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-right {
+  0% {
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
 @media (min-width:1440px) {
   .lcont{
     margin-top: 160px;
@@ -520,6 +629,22 @@ border-bottom: 2px solid #FF9575;
   } */
   .projectsdone{
     gap: 10px;
+  }
+  /* .hamburgermenu li{
+    display: flex;
+  }
+  .show{
+    display: flex;
+  } */
+  .hamburgermenu{
+    display: flex;
+    flex-direction: row;
+    gap: 30px
+  }
+  .hamburgermenu ul{
+    display: flex;
+    flex-direction: column;
+    gap: 10px
   }
 }
 @media (max-width:426px){
@@ -642,6 +767,17 @@ border-bottom: 2px solid #FF9575;
     align-items: center;
   }
   .contactcont_1{
+    width: 340px;
+  }
+}
+@media (max-width: 321px) {
+  .contactcont h1{
+    font-size: 40px;
+  }
+  .contactcont_1{
+    width: 300px;
+  }
+  .contactcont_1 textarea{
     width: 100%
   }
 }
